--- a/scss/site/analysis.scss
+++ b/scss/site/analysis.scss
@@ -168,7 +168,7 @@ table.hidden-segments .sauce-rank-holder {
                 color: #f0f0f0;
                 border-radius: 0.2rem;
                 box-shadow: 1px 1px 10px 0 #0003;
-                padding: 0.5rem 1rem;
+                padding: 0.4rem 0.65rem;
             }
         }
     }
